--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ title: Blog
           <i class="fa fa-sticky-note"></i>
         </div>
         <div class="row-content">
+          <div class="least-content">{{ date_to_string }}</div>
           <h4 class="list-group-item-heading"><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></h4>
 
           <p class="list-group-item-text">{{ post.content | strip_html | truncatewords: 20 }}</p>
